@@ -2,8 +2,8 @@ Package: RIPSeeker
 Type: Package
 Title: RIPSeeker: a statistical package for identifying
         protein-associated transcripts from RIP-seq experiments
-Version: 0.99.5
-Date: 2012-Nov-1
+Version: 0.99.6
+Date: 2012-Nov-11
 Author: Yue Li
 Maintainer: Yue Li <yueli@cs.toronto.edu>
 Description: Infer and discriminate RIP peaks from RIP-seq alignments using two-state HMM with negative binomial emission probability. While RIPSeeker is specifically tailored for RIP-seq data analysis, it also provides a suite of bioinformatics tools integrated within this self-contained software package comprehensively addressing issues ranging from post-alignments processing to visualization and annotation.
